--- a/Dalda/package.json
+++ b/Dalda/package.json
@@ -4,6 +4,8 @@
   "version": "0.0.0",
   "devDependencies": {
     "aspnet-webpack": "^2.0.1",
+    "bootstrap": "^3.3.6",
+    "jquery": "^3.1.1",
     "css-loader": "^0.25.0",
     "event-source-polyfill": "^0.0.7",
     "extract-text-webpack-plugin": "^2.0.0-rc",
